--- a/products/templates/base.html
+++ b/products/templates/base.html
@@ -14,6 +14,9 @@
 
     </head>
     <body>
+
+        {% include 'header.html' %}
+
         <style>
             .main {
                 height: 100vh;
@@ -25,16 +28,10 @@
 
             {% endblock content %}
         </div>
-        <footer>
-            This is our footer
-            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-                    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-                    crossorigin="anonymous">
-            </script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-                    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-                    crossorigin="anonymous">
-            </script>
-        </footer>
+
     </body>
+    {% comment %}
+        {% include 'footer.html' %}
+    {% endcomment %}
+
 </html>
