--- a/products/templates/home-page.html
+++ b/products/templates/home-page.html
@@ -1,8 +1,80 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    {% for product in products %}
-        {{ product.name }} <br>
-        {{ product.price }}
+    <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+      <h1 class="display-4 fw-normal">Products</h1>
+      <p class="fs-5 text-muted">Quickly build an effective product tables for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
+    </div>
+    {% for category in categories %}
+        <div class="main">
+            <h2>Category: {{ category.name }}</h2>
+            <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+            {% for product in products %}
+                {% if product.category == category %}
+                    <div class="col">
+                        <div class="card mb-4 rounded-3 shadow-sm">
+                            <div class="card-header py-3">
+                                <h4 class="my-0 fw-normal">{{ product.name }}</h4>
+                            </div>
+                            <div class="card-body">
+                                <p>
+                                    <img src="{{ product.productimage_set.first.image.url }}" width="150px" height="150px">
+                                </p>
+                                <ul class="list-unstyled mt-3 mb-4" >
+                                    <li>Price: {{product.price}} $</li>
+                                    <li>Sizes:
+                                        {% for size_key, size_value in product.sizes.items %}
+                                            {{ size_value }}
+                                        {% endfor %}
+                                    </li>
+                                    <li>Description: {{product.description}}</li>
+                                </ul>
+
+                            </div>
+                            <style>
+                                .add-to-cart {
+                                    padding: .5rem 1rem;
+                                    margin-bottom: 0;
+                                    background-color: rgba(0,0,0,.03);
+                                    border-top: 1px solid rgba(0,0,0,.125);
+                                    padding-top: 1rem!important;
+                                    padding-bottom: 1rem!important;
+                                }
+                                .add-to-cart input[type=submit] {
+                                    background-color: #251535;
+                                    color: white;
+                                    border: 1px solid white;
+                                }
+                                .add-to-cart input[type=submit]:hover {
+                                    border: 3px solid white;
+                                }
+                            </style>
+                            <div class="add-to-cart" style="background-color: rgba(0,0,0,.03); margin:0">
+                                <form method="post" action="/products/p"> {% csrf_token %}
+                                    {% comment %}{{ add_to_cart_form.as_p }}{% endcomment %}
+                                    <label for="quantity">Quantity: </label> <input type="number" id="quantity" name="quantity" step="1" min="0">
+                                    <br> <br>
+                                    Size:
+                                    <select id="size" name="size" value="Size">
+                                        {% for size_key, size_value in product.sizes.items %}
+                                            <option value={{ size_value }}> {{ size_value }} </option>
+                                        {% endfor %}
+                                    </select>
+                                    <br> <br>
+                                    <input type="hidden" name="product_id" value={{ product.id }}>
+                                    <input type="submit" value="Add to cart +" class="w-100 btn btn-lg btn-outline-primary">
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
+            {% endfor %}
+            </div>
+        </div>
     {% endfor %}
+    {% include 'footer.html' %}
 {% endblock content %}
+
+
+
+
