--- a/products/templates/base.html
+++ b/products/templates/base.html
@@ -11,27 +11,14 @@
         <title>E-Commerce Website</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-
         {% include 'header.html' %}
-
-        <style>
-            .main {
-                height: 100vh;
-
-            }
-        </style>
         <div class="main">
             {% block content %}
-
             {% endblock content %}
         </div>
-
     </body>
-    {% comment %}
-        {% include 'footer.html' %}
-    {% endcomment %}
-
+    {% comment %} {% include 'footer.html' %} {% endcomment %}
 </html>
