editing the view of addProduct

--- a/products/templates/home-page.html
+++ b/products/templates/home-page.html
@@ -2,7 +2,6 @@
 {% load static %}
 
 {% block content %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
       <h1 class="display-4 fw-normal">Products</h1>
       <p class="fs-5 text-muted">Quickly build an effective product tables for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
@@ -58,11 +57,71 @@
 {#                    <button id="add-category" >Add new Product to this category +</button>#}
 {#                </div>#}
                 <div class="col">
-                        <div class="card mb-4 rounded-3 shadow-sm">
-                            hi
-                                                <button id="add-category" >Add new Product to this category +</button>
+                    <div class="card mb-4 rounded-3 shadow-sm">
+                        hi
+                        <button id="add-product{{category}}" onclick="addProduct()">Add new Product to this category +</button>
+                    </div>
+                    <div class="bg-modal" id="bg-modal1">
+                        <!-- The modal -->
+                        <style>
+                            #add-new-product-modal {
+                                position: fixed;
+                                background-color: white;
+                                z-index: 2;
+                                top: calc(50% - 250px);
+                                left: calc(50% - 250px);
+                                height: 500px;
+                                width: 500px;
+                            }
+                        </style>
+                        <div id="add-new-product-modal" class="modal_">
+                            <!-- The modal content -->
+                            <span class="close" onclick="closeModal1()" style="display: block;">&times;</span>
+                            <div class="modal-content_">
+                                <form method="post" action="/products/addProduct"> {% csrf_token %}
+                                    <div>
+                                        <label for="product-name">Product Name</label>
+                                        <br>
+                                        <input type="text" id="product-name" name="product-name" required>
+                                    </div>
 
+                                    <div>
+                                        <label for="product-price">Product Price</label>
+                                        <br>
+                                        <input type="number" id="product-price" name="product-price" min="0" required>
+                                    </div>
+
+                                    <div>
+                                        <label for="product-description">Product Description</label>
+                                        <br>
+                                        <input type="text" id="product-description" name="product-description">
+                                    </div>
+
+                                    <div>
+                                        <label for="product-images">Product Images</label>
+                                        <br>
+                                        <input type="file" multiple id="product-images" name="product-images">
+                                    </div>
+
+                                    <div>
+                                        <label for="product-sizes">Product Szies</label>
+                                        <br>
+                                        <input type="text" id="product-sizes" name="product-sizes" required>
+                                    </div>
+
+                                    <div>
+                                        <label for="product-category" hidden>Product Category</label>
+                                        <br>
+                                        <input type="text" id="product-category" name="product-category" hidden value="{{ category }}">
+                                    </div>
+
+                                    <div>
+                                        <input type="submit" value="Add Product">
+                                    </div>`
+                                </form>
+                            </div>
                         </div>
+                    </div>
                 </div>
             {% endif %}
             </div>
@@ -86,7 +145,7 @@
                                 <input type="text" id="new-category-item" name="new-category-item">
                             </div>
                             <div>
-                                <input type="submit" value="add category">
+                                <input type="submit" value="Add Category">
                             </div>
                         </div>
 
@@ -95,7 +154,6 @@
             </div>
         </div>
     {% endif %}
-
     {% include 'footer.html' %}
     <script src="{%  static 'js/script.js' %}"></script>
 {% endblock content %}
