--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,20 +53,35 @@ body {
     top: 0;
     left: 0;
     background-color: rgba(0,0,0,0.7);
-    width: 900px;
+    width: 100%;
     height: 100%;
     display: none;
     z-index: 1;
 }
 
-#add-new-category-model {
+#add-new-category-model, #add-new-product-modal {
     position: fixed;
+    background-color: white;
+    z-index: 2;
+}
+
+
+
+#add-new-category-model {
     top: calc(50% - 150px);
     left: calc(50% - 250px);
     height: 300px;
     width: 500px;
+}
+
+#add-new-product-modal {
+        position: fixed;
     background-color: white;
     z-index: 2;
+    top: calc(50% - 250px);
+    left: calc(50% - 250px);
+    height: 500px;
+    width: 500px;
 }
 
 .modal-content_ {
