--- a/products/templates/footer.html
+++ b/products/templates/footer.html
@@ -5,7 +5,7 @@
 </style>
 <hr>
 <footer>
-    <div class="d-flex flex-row align-item-center footer"><p class="m-auto">In case of any problem please contact us at ecommerce.website@business.com</p></div>
+    <div class="d-flex flex-row align-item-center footer" id="contact-us"><p class="m-auto">In case of any problem please contact us at ecommerce.website@business.com</p></div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
             integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
             crossorigin="anonymous">
