--- a/products/templates/header.html
+++ b/products/templates/header.html
@@ -7,9 +7,9 @@
         <span class="fs-4">E-Commerce Website</span>
         </a>
         <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-            <a class="me-3 py-2 text-dark text-decoration-none" href="#">Products</a>
-            <a class="me-3 py-2 text-dark text-decoration-none" href="#">Category</a>
-            <a class="me-3 py-2 text-dark text-decoration-none" href="#">Contact Us</a>
+            <a class="me-3 py-2 text-dark text-decoration-none" href="#products">Products</a>
+            <a class="me-3 py-2 text-dark text-decoration-none" href="#category">Category</a>
+            <a class="me-3 py-2 text-dark text-decoration-none" href="#contact-us">Contact Us</a>
             {%  if user.is_authenticated %}
                 <a class="me-3 py-2 text-dark text-decoration-none" href="/logout">Log out</a>
             {% else %}
