--- a/products/templates/footer.html
+++ b/products/templates/footer.html
@@ -1,3 +1,4 @@
+{% load static %}
 <style>
     .footer {
         min-height: 100px;
@@ -14,4 +15,5 @@
             integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
             crossorigin="anonymous">
     </script>
+    <script src="{%  static 'js/script.js' %}"></script>
 </footer>
