--- a/products/templates/home-page.html
+++ b/products/templates/home-page.html
@@ -75,7 +75,8 @@
                         <!-- The modal -->
                         <div id="add-new-product-modal" class="modal_">
                             <!-- The modal content -->
-                            <span class="close" onclick="closeModal1()" style="display: block;">&times;</span>
+                            <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+                            <span class="close" onclick="closeModal1(this)" style="display: block;">&times;</span>
                             <div class="modal-content_">
                                 <form method="post" action="/products/addProduct"> {% csrf_token %}
                                     <div>
@@ -120,6 +121,7 @@
                                     </div>
 
                                     <div>
+{#                                        <input type="reset" id="reset" hidden>#}
                                         <input type="submit" value="Add Product" class="addBtn">
                                     </div>`
                                 </form>
