editing some views

--- a/products/templates/home-page.html
+++ b/products/templates/home-page.html
@@ -107,11 +107,11 @@
                                         <div>
                                             <label for="product-sizes">Product Sizes</label>
                                             <br>
-                                            <input type="text" id="product-sizes1" name="product-sizes1" required placeholder="Enter a size">
+                                            <input type="text" id="product-sizes1" name="product-sizes1" required placeholder="Enter a size" style="margin-bottom: 5px">
                                         </div>
                                         <br>
                                         <input id="number-of-sizes" name="number-of-sizes" type="number" hidden value="1">
-                                        <button onclick="createNewInput(this)">Add one more size</button>
+                                        <button onclick="createNewInput(this)" class="add-new-size">Add one more size</button>
                                     </div>
 
                                     <div>
