--- a/products/templates/header.html
+++ b/products/templates/header.html
@@ -9,6 +9,9 @@
         <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
             <a class="me-3 py-2 text-dark text-decoration-none" href="http://127.0.0.1:8000/ECW#products">Products</a>
             <a class="me-3 py-2 text-dark text-decoration-none" href="http://127.0.0.1:8000/ECW#category">Category</a>
+            {% if user.is_authenticated %}
+                <a class="me-3 py-2 text-dark text-decoration-none" href="/my_cart">My Cart</a>
+            {% endif %}
             <a class="me-3 py-2 text-dark text-decoration-none" href="http://127.0.0.1:8000/ECW#contact-us">Contact Us</a>
             {%  if user.is_authenticated %}
                 <a class="me-3 py-2 text-dark text-decoration-none" href="/logout">Log out</a>
